# live-document

./: .gitignore  Cargo.toml  README.md  index.html  justfile  style.css
.cargo/: config
.github/workflows/: deploy.yml
src/: app.rs  config.rs  document.rs  error.rs  home.rs  lib.rs  main.rs  utils.rs
