[package]
name = "live-document"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Karwowski <to.karwowski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A shared document application akin to Google Docs."
homepage = "http://live-document.s3-website.eu-central-1.amazonaws.com/"
repository = "https://github.com/wasm-peers/live-document"
keywords = ["wasm", "webrtc", "peer-to-peer", "webassembly", "shared document", "CRDT"]
categories = ["wasm", "network-programming", "web-programming", "text-editors"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
yew = "0.19.3"
yew-router = "0.16.0"
log = "0.4.16"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
wasm-bindgen = "0.2.80"
serde = "1.0"
wasm-peers = "0.4.0"
once_cell = "1.15.0"
envy = "0.4.2"
thiserror = "1.0.37"
