[package]
name = "live-document"
version = "0.1.0"
edition = "2021"
authors = ["Tomasz Karwowski <to.karwowski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A shared document application akin to Google Docs."
homepage = "http://live-document.s3-website.eu-central-1.amazonaws.com/"
repository = "https://github.com/wasm-peers/live-document"
keywords = ["wasm", "webrtc", "peer-to-peer", "webassembly", "shared document", "CRDT"]
categories = ["wasm", "network-programming", "web-programming", "text-editors"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
yew = "0.19"
yew-router = "0.16"
log = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"
wasm-bindgen = { version = "0.2", default-features = false }
serde = {version = "1", default-features = false }
wasm-peers = { version = "0.4", default-features = false, features = ["many-to-many"] }
once_cell = "1"
envy = "0.4"
thiserror = "1"
